# you-autocomplete-me

./: Cargo.toml  README.md
benches/: trie_insert_benchmark.rs
src/: builder.rs  edit_distance.rs  lib.rs  match.rs  match_configuration.rs  match_profile.rs  old.rs  score_configuration.rs  search.rs  trie.rs
src/edit_distance/: jaro_winkler.rs  levenshtein.rs
