[package]
name = "you-autocomplete-me"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lib]
name = "you_autocomplete_me"



[dependencies]
itertools = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
uuid = {version="1", features = ["v4"]}
test-case = "3"

[[bench]]
name =  "trie_insert_benchmark"
harness = false
